# eola

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lambda.yaml
eola/: connection.py
eola/enums/: engine.py
handlers/: lambda.py
images/: Dockerfile.lambda
